  were inconvient for dynamically-allocated messages; the messages
  passed to the new functions are handled by the garbage collector.
  (Gabriel Scherer, review by Mark Shinwell, request by Immanuel Litzroth)

- GPR#795: remove 256-character limitation on Sys.executable_name
  (Xavier Leroy)

- GPR#891: Use -fno-builtin-memcmp when building runtime with gcc.
  (Leo White)

### Type system:

- PR#6608, GPR#901: unify record types when overriding all fields
  (Tadeu Zagallo and Gabriel Scherer, report by Jeremy Yallop,
  review by David Allsopp, Jacques Garrigue)

* PR#7414, GPR#929: Soundness bug with non-generalized type variables and functors.
  (Jacques Garrigue, report by Leo White)

### Compiler user-interface and warnings:

- PR#7050, GPR#748 GPR#843 GPR#864: new `-args/-args0 <file>` parameters to
  provide extra command-line arguments in a file -- see documentation.
  User programs may implement similar options using the new `Expand`
  constructor of the `Arg` module.
  (Bernhard Schommer, review by Jérémie Dimino, Gabriel Scherer
   and Damien Doligez, discussion with Alain Frisch and Xavier Leroy,
   feature request from the Coq team)

- PR#7137, GPR#960: "-open" command line flag now accepts a module path
  (not a module name) (Arseniy Alekseyev and Leo White)

- PR#7172, GPR#970: add extra (ocamlc -config) options
  int_size, word_size, ext_exe
  (Gabriel Scherer, request by Daniel Bünzli)

- PR#7315, GPR#736: refine some error locations
  (Gabriel Scherer and Alain Frisch, report by Matej Košík)

- PR#7473, GPR#1025: perform proper globbing for command-line arguments on
  Windows
  (Jonathan Protzenko)

- PR#7479: make sure "ocamlc -pack" is only given .cmo and .cmi files,
  and that "ocamlopt -pack" is only given .cmx and .cmi files.
  (Xavier Leroy)

- GPR#796: allow compiler plugins to declare their own arguments.
  (Fabrice Le Fessant)

- GPR#829: better error when opening a module aliased to a functor
  (Alain Frisch)
